--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,12 @@ dependencies:
   record: ^6.0.0
   just_audio: ^0.10.2
   flutter_bloc: ^9.1.1
+  firebase_core: ^3.13.1
+  cloud_firestore: ^5.6.8
+  firebase_storage: ^12.4.6
+  firebase_messaging: ^15.2.6
+  firebase_auth: ^5.5.4
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
