--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^1.0.4
 
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
@@ -38,6 +39,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.13.1
+  firebase_storage: ^12.4.6
+  firebase_messaging: ^15.2.6
+  firebase_auth: ^5.5.4
+  cloud_firestore: ^5.6.8
 
 dev_dependencies:
   flutter_test:
