--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAr6G1M32-Fv5b5PWdSvgX5BDBbGR6-1pI</string>
+	<string>AIzaSyAboEEDNp8IsIrGoIW-MbiApuu2A9pPD6s</string>
 	<key>GCM_SENDER_ID</key>
-	<string>361469210976</string>
+	<string>340621456955</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.orders.ordersmanagmentApp</string>
 	<key>PROJECT_ID</key>
-	<string>fluttertest-77bb1</string>
+	<string>finalprojectflutter-6ae1f</string>
 	<key>STORAGE_BUCKET</key>
-	<string>fluttertest-77bb1.firebasestorage.app</string>
+	<string>finalprojectflutter-6ae1f.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,9 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:361469210976:ios:8d396ed784c95a04aeee05</string>
+	<string>1:340621456955:ios:f967b5eca26108e7bbce1e</string>
+	<key>NSLocalNetworkUsageDescription</key>
+<string>App needs access to local network to connect to devices.</string>
+
 </dict>
 </plist>
