--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,8 @@ dependencies:
   firebase_auth: ^5.5.4
   google_sign_in: ^6.3.0
   firebase_app_check: ^0.3.2+6
-  shared_preferences: ^2.2.2 # Or latest version
+  shared_preferences: ^2.2.2
+  connectivity_plus: ^5.0.2
 
 
 dev_dependencies:
